# trippy

./: .gitignore  .typos.toml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASES.md  buttons.css  deny.toml  dprint.json  font-hack-subset.css  font-hack.css  footer.css  header.css  index.html  logo.css  main.css  pagination.css  post.css  publish-ppa.sh  robots.txt  sitemap.xml  style.css  trippy-config-sample.toml
crates/trippy/: Cargo.toml
crates/trippy-core/: Cargo.toml  tests
crates/trippy-core/src/: builder.rs  config.rs  constants.rs  error.rs  flows.rs  lib.rs  net.rs  probe.rs  state.rs  strategy.rs  tracer.rs  types.rs
crates/trippy-core/src/net/: channel.rs  common.rs  extension.rs  ipv4.rs  ipv6.rs  platform.rs  socket.rs  source.rs
crates/trippy-core/src/net/platform/: byte_order.rs  unix.rs  windows.rs
crates/trippy-core/src/packet/: checksum.rs  error.rs  icmp_extension.rs  icmpv4.rs  icmpv6.rs  ipv4.rs  ipv6.rs  tcp.rs  udp.rs
crates/trippy-core/tests/: sim.rs
crates/trippy-core/tests/resources/backend/: ipv4_3probes_3hops_mixed_multi.yaml
crates/trippy-core/tests/resources/simulation/: ipv4_icmp.toml  ipv4_icmp.yaml  ipv4_icmp_gaps.toml  ipv4_icmp_gaps.yaml  ipv4_icmp_max.toml  ipv4_icmp_min.toml  ipv4_icmp_min.yaml  ipv4_icmp_ooo.toml  ipv4_icmp_ooo.yaml  ipv4_icmp_pattern.toml  ipv4_icmp_quick.toml  ipv4_icmp_quick.yaml  ipv4_icmp_tos.toml  ipv4_icmp_wrap.toml  ipv4_icmp_wrap.yaml  ipv4_tcp_fixed_dest.toml  ipv4_tcp_fixed_dest.yaml  ipv4_tcp_fixed_dest_max.toml  ipv4_udp_classic_fixed_dest.toml  ipv4_udp_classic_fixed_dest.yaml  ipv4_udp_classic_fixed_src.toml  ipv4_udp_classic_fixed_src.yaml  ipv4_udp_classic_fixed_src_max.toml  ipv4_udp_classic_privileged_tos.toml  ipv4_udp_classic_unprivileged.toml  ipv4_udp_classic_unprivileged.yaml  ipv4_udp_classic_unprivileged_tos.toml  ipv4_udp_dublin_fixed_both.toml  ipv4_udp_dublin_fixed_both.yaml  ipv4_udp_paris_fixed_both.toml  ipv4_udp_paris_fixed_both.yaml  ipv6_icmp.toml  ipv6_icmp_max.toml  ipv6_icmp_min.toml  ipv6_icmp_pattern.toml  ipv6_tcp_fixed_dest.toml  ipv6_tcp_fixed_dest_max.toml  ipv6_udp_classic_fixed_dest.toml  ipv6_udp_classic_fixed_src.toml  ipv6_udp_classic_fixed_src_max.toml  (+4 more)
crates/trippy-core/tests/resources/state/: all_status.toml  all_status.yaml  floss_bloss.toml  floss_bloss.yaml  full_completed.toml  full_completed.yaml  full_mixed.toml  ipv4_3probes_3hops_mixed_multi.yaml  ipv4_4probes_0latency.yaml  ipv4_4probes_all_status.yaml  ipv4_nat.yaml  minimal.toml  minimal.yaml  nat.toml  nat.yaml  no_latency.toml  no_latency.yaml  non_default_minimum_ttl.toml  tos.toml
crates/trippy-core/tests/sim/: network.rs  simulation.rs  tests.rs  tracer.rs  tun_device.rs
crates/trippy-core/tests/sim/network/: ipv4.rs  ipv6.rs
crates/trippy-dns/: Cargo.toml
crates/trippy-dns/src/: config.rs  lazy_resolver.rs  lib.rs  resolver.rs
crates/trippy-packet/: Cargo.toml
crates/trippy-packet/src/: buffer.rs  checksum.rs  error.rs  icmp_extension.rs  icmpv4.rs  icmpv6.rs  ip.rs  ipv4.rs  ipv6.rs  lib.rs  tcp.rs  udp.rs
crates/trippy-privilege/: Cargo.toml
crates/trippy-privilege/src/: lib.rs
crates/trippy-sim/: Cargo.toml
crates/trippy-sim/src/: app.rs  lib.rs  main.rs  network.rs  simulation.rs  tracer.rs  tun_device.rs
crates/trippy-tui/: Cargo.toml  build.rs  i18n.toml  locales.toml  trippy-config-sample.toml
crates/trippy-tui/i18n/de/: trippy-tui.ftl
crates/trippy-tui/i18n/es/: trippy-tui.ftl
crates/trippy-tui/i18n/fr/: trippy-tui.ftl
crates/trippy-tui/i18n/it/: trippy-tui.ftl
crates/trippy-tui/i18n/pt/: trippy-tui.ftl
crates/trippy-tui/i18n/sv/: trippy-tui.ftl
crates/trippy-tui/i18n/tr/: trippy-tui.ftl
crates/trippy-tui/i18n/zh/: trippy-tui.ftl
crates/trippy-tui/locales/: app.toml  app.yml
crates/trippy-tui/src/: app.rs  config.rs  frontend.rs  geoip.rs  lib.rs  locale.rs  print.rs  report.rs  util.rs
crates/trippy-tui/src/config/: binding.rs  cmd.rs  columns.rs  constants.rs  file.rs  theme.rs
crates/trippy-tui/src/frontend/: binding.rs  columns.rs  config.rs  render.rs  theme.rs  tui_app.rs
crates/trippy-tui/src/frontend/render/: alert.rs  app.rs  bar.rs  body.rs  bottom.rs  bsod.rs  chart.rs  flows.rs  footer.rs  header.rs  help.rs  histogram.rs  history.rs  settings.rs  splash.rs  table.rs  tabs.rs  util.rs  widgets.rs  world.rs
crates/trippy-tui/src/report/: csv.rs  dot.rs  flows.rs  json.rs  silent.rs  stream.rs  table.rs  types.rs
crates/trippy-tui/tests/resources/ipinfo/: README.md  ip_country_asn_sample.mmdb  ip_geolocation_extended_sample.mmdb  ipinfo_core_sample.mmdb  ipinfo_lite_sample.mmdb  ipinfo_location_sample.mmdb
crates/trippy-tui/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  trippy.toml
crates/trippy/src/: app.rs  backend.rs  config.rs  frontend.rs  lib.rs  main.rs
crates/trippy/src/backend/: trace.rs
crates/trippy/src/config/: cmd.rs  constants.rs  file.rs
crates/trippy/src/frontend/: binding.rs  config.rs  tui_app.rs
crates/trippy/src/report/: csv.rs  dot.rs  flows.rs  json.rs  stream.rs  table.rs  types.rs
crates/trippy/test_resources/backend/: ipv4_4probes_0latency.yaml
crates/trippy/test_resources/config/: completions_bash.txt  completions_powershell.txt
examples/traceroute/: Cargo.toml
examples/traceroute/src/: main.rs
trippy/: Cargo.toml
trippy-core/: Cargo.toml
trippy-core/src/: config.rs  constants.rs  error.rs  lib.rs  net.rs  probe.rs  tracer.rs  util.rs
trippy-core/src/net/: channel.rs  ipv4.rs  ipv6.rs  packet.rs  socket.rs  source.rs
trippy-core/src/net/packet/: checksum.rs  icmpv4.rs  icmpv6.rs  ipv4.rs  ipv6.rs  tcp.rs  udp.rs
trippy-core/src/net/platform/: byte_order.rs  unix.rs  windows.rs
trippy/src/: backend.rs  caps.rs  config.rs  geoip.rs  main.rs  report.rs
trippy/src/config/: binding.rs  cmd.rs  file.rs
trippy/src/frontend/: config.rs  render.rs  theme.rs
trippy/src/frontend/render/: app.rs  header.rs  history.rs  settings.rs  splash.rs  table.rs  world.rs
(+353 files in other folders)
