[workspace]
resolver = "2"
members = [
    "crates/trippy",
    "crates/trippy-tui",
    "crates/trippy-core",
    "crates/trippy-packet",
    "crates/trippy-privilege",
    "crates/trippy-dns",
    "examples/*",
]

[workspace.package]
version = "0.11.0-dev"
authors = ["FujiApple <fujiapple852@gmail.com>"]
documentation = "https://github.com/fujiapple852/trippy"
homepage = "https://github.com/fujiapple852/trippy"
repository = "https://github.com/fujiapple852/trippy"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"
keywords = ["cli", "tui", "traceroute", "ping", "icmp"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
trippy-tui = { version = "0.11.0-dev", path = "crates/trippy-tui" }
trippy-core = { version = "0.11.0-dev", path = "crates/trippy-core" }
trippy-privilege = { version = "0.11.0-dev", path = "crates/trippy-privilege" }
trippy-dns = { version = "0.11.0-dev", path = "crates/trippy-dns" }
trippy-packet = { version = "0.11.0-dev", path = "crates/trippy-packet" }
anyhow = "1.0.83"
arrayvec = { version = "0.7.4", default-features = false }
bitflags = "2.6.0"
caps = "0.5.5"
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.4.0", default-features = false }
clap_complete = "4.4.9"
clap_mangen = "0.2.20"
comfy-table = { version = "7.1.0", default-features = false }
crossbeam = "0.8.4"
crossterm = { version = "0.27.0",  default-features = false }
csv = "1.3.0"
derive_more = { version = "0.99.18", default-features = false }
dns-lookup = "2.0.4"
encoding_rs_io = "0.1.7"
etcetera = "0.8.0"
hex-literal = "0.4.1"
hickory-resolver = "0.24.1"
humantime = "2.1.0"
indexmap = { version = "2.2.6", default-features = false }
insta =  "1.39.0"
ipnetwork = "0.20.0"
itertools = "0.13.0"
maxminddb = "0.24.0"
mockall = "0.12.1"
nix = { version = "0.29.0", default-features = false }
parking_lot = "0.12.3"
paste = "1.0.15"
petgraph = "0.6.5"
pretty_assertions = "1.4.0"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0.201", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
serde_with = "3.8.1"
serde_yml = "0.0.10"
socket2 = "0.5.7"
strum = { version = "0.26.3", default-features = false }
test-case = "3.3.1"
thiserror = "1.0.60"
tokio = "1.38.0"
tokio-util = "0.7.11"
toml = { version = "0.8.14", default-features = false }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.18", default-features = false }
tun2 = "2.0.1"
widestring = "1.0.2"
windows-sys = "0.52.0"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
struct_field_names = "allow"
use_self = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"