[workspace]
resolver = "2"
members = [
  "crates/trippy",
  "crates/trippy-tui",
  "crates/trippy-core",
  "crates/trippy-packet",
  "crates/trippy-privilege",
  "crates/trippy-dns",
  "examples/*",
]

[workspace.package]
version = "0.14.0-dev"
authors = ["FujiApple <fujiapple852@gmail.com>"]
documentation = "https://github.com/fujiapple852/trippy"
homepage = "https://github.com/fujiapple852/trippy"
repository = "https://github.com/fujiapple852/trippy"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"
keywords = ["cli", "tui", "traceroute", "ping", "icmp"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
trippy-tui = { version = "0.14.0-dev", path = "crates/trippy-tui" }
trippy-core = { version = "0.14.0-dev", path = "crates/trippy-core" }
trippy-privilege = { version = "0.14.0-dev", path = "crates/trippy-privilege" }
trippy-dns = { version = "0.14.0-dev", path = "crates/trippy-dns" }
trippy-packet = { version = "0.14.0-dev", path = "crates/trippy-packet" }
anyhow = "1.0.91"
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.9.4"
caps = "0.5.5"
chrono = { version = "0.4.42", default-features = false }
chrono-tz = "0.10.4"
clap = { version = "4.5.20", default-features = false }
clap_complete = "4.4.9"
clap_mangen = "0.2.20"
comfy-table = { version = "7.1.4", default-features = false }
crossbeam = "0.8.4"
crossterm = { version = "0.28.1", default-features = false }
csv = "1.3.1"
derive_more = { version = "2.0.1", default-features = false }
dns-lookup = "2.0.4"
encoding_rs_io = "0.1.7"
etcetera = "0.10.0"
hex-literal = "1.0.0"
hickory-resolver = "0.24.4"
humantime = "2.2.0"
indexmap = { version = "2.11.4", default-features = false }
insta = "1.43.2"
ipnetwork = "0.21.1"
itertools = "0.14.0"
maxminddb = "0.26.0"
mockall = "0.13.1"
nix = { version = "0.30.1", default-features = false }
parking_lot = "0.12.4"
paste = "1.0.15"
petgraph = "0.8.2"
pretty_assertions = "1.4.1"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.201", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
serde_with = { version = "3.14.0", default-features = false, features = ["macros"] }
socket2 = "0.6.0"
strum = { version = "0.27.2", default-features = false }
sys-locale = "0.3.2"
test-case = "3.3.1"
thiserror = "2.0.3"
tokio = "1.47.1"
tokio-util = "0.7.16"
toml = { version = "0.8.23", default-features = false }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.20", default-features = false }
tun = "0.7.22"
unic-langid = "0.9.6"
unicode-width = "0.2.0"
widestring = "1.2.0"
windows-sys = "0.52.0"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
option_if_let_else = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
bool_assert_comparison = "allow"
missing_const_for_fn = "allow"
struct_field_names = "allow"
cognitive_complexity = "allow"

[profile.release]
lto = true
