[package]
name = "trippy-core"
description = "A network tracing library"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["traceroute", "ping", "icmp"]
categories = ["network-programming"]
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.44"
derive_more = "0.99.17"
arrayvec = "0.7.4"
socket2 = { version = "0.5.2", features = [ "all" ] }
tracing = "0.1.37"
itertools = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = [ "user", "poll", "net" ] }

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_IO",
    "Win32_System_Threading",
]

[dev-dependencies]
rand = "0.8.5"
test-case = "3.1.0"
