[package]
name = "trippy"
description = "A network diagnostic tool"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cli", "tui", "traceroute", "ping", "icmp"]
categories = ["command-line-utilities", "network-programming"]
readme.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
bench = false
path = "src/main.rs"
name = "trip"

[dependencies]
trippy-core = { path = "../trippy-core" }
anyhow = "1.0.72"
dns-lookup = "2.0.1"
trust-dns-resolver = "0.22.0"
crossbeam = "0.8.2"
clap = { version = "4.3.21", features = [ "derive", "wrap_help", "cargo" ] }
clap_complete = "4.3.2"
humantime = "2.1.0"
parking_lot = "0.12.1"
ratatui = "0.22.0"
crossterm = "0.27.0"
chrono = { version = "0.4.26", default-features = false, features = [ "clock" ] }
itertools = "0.11.0"
serde = { version = "1.0.168", features = [ "derive" ] }
serde_json = "1.0.104"
comfy-table = "7.0.1"
strum = { version = "0.25.0", features = [ "derive" ] }
etcetera = "0.8.0"
toml = "0.7.6"
indexmap = "2.0.0"
maxminddb = "0.23.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter", "json" ] }
tracing-chrome = "0.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = [ "user" ] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [ "Win32_Foundation", "Win32_System_Threading" ] }
paste = "1.0.14"

[dev-dependencies]
test-case = "3.1.0"

# cargo-generate-rpm dependencies
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/trip", dest = "/usr/bin/trip", mode = "755" },
]