[package]
name = "trippy-dns"
description = "A lazy DNS resolver for Trippy"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crossbeam.workspace = true
dns-lookup.workspace = true
hickory-resolver.workspace = true
itertools.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
