[package]
name = "trippy-packet"
description = "Network packets for Trippy"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
itertools.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
hex-literal.workspace = true

[lints]
workspace = true
