[package]
name = "trippy-privilege"
description = "Discover platform privileges"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }
paste.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
