[package]
name = "trippy-tui"
description = "A network diagnostic tool"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trippy-core.workspace = true
trippy-privilege.workspace = true
trippy-dns.workspace = true
anyhow.workspace = true
chrono = { version = "0.4.38", default-features = false, features = [ "clock" ] }
clap = { version = "4.4.0",  default-features = false, features = [ "cargo", "derive", "wrap_help", "usage", "unstable-styles", "color", "suggestions", "error-context" ] }
clap_complete = "4.4.9"
clap_mangen = "0.2.20"
comfy-table = { version = "7.1.0", default-features = false }
crossterm = { version = "0.27.0",  default-features = false, features = [ "events", "windows" ] }
csv = "1.3.0"
derive_more.workspace = true
encoding_rs_io = "0.1.7"
etcetera = "0.8.0"
humantime = "2.1.0"
itertools.workspace = true
maxminddb = "0.24.0"
petgraph = "0.6.5"
ratatui = "0.27.0"
serde.workspace = true
serde_json = { version = "1.0.117", default-features = false }
serde_with = "3.8.1"
strum = { version = "0.26.3", default-features = false, features = [ "std", "derive" ] }
thiserror.workspace = true
toml = { version = "0.8.14", default-features = false, features = [ "parse" ] }
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "json", "env-filter" ] }
tracing.workspace = true

[dev-dependencies]
insta = { version = "1.39.0", features = ["serde"] }
pretty_assertions = "1.4.0"
serde_yaml.workspace = true
test-case.workspace = true

[lints]
workspace = true

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/trip", dest = "/usr/bin/trip", mode = "755" },
]