[package]
name = "trippy-tui"
description = "A network diagnostic tool"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trippy-core.workspace = true
trippy-privilege.workspace = true
trippy-dns.workspace = true
anyhow.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
chrono-tz.workspace = true
clap = { workspace = true, default-features = false, features = ["cargo", "derive", "wrap_help", "usage", "unstable-styles", "color", "suggestions", "error-context"] }
clap_complete.workspace = true
clap_mangen.workspace = true
comfy-table.workspace = true
crossterm = { workspace = true, default-features = false, features = ["events", "windows"] }
csv.workspace = true
encoding_rs_io.workspace = true
etcetera.workspace = true
humantime.workspace = true
itertools.workspace = true
maxminddb.workspace = true
petgraph.workspace = true
ratatui.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
strum = { workspace = true, default-features = false, features = ["std", "derive"] }
sys-locale.workspace = true
toml = { workspace = true, default-features = false, features = ["parse"] }
tracing-chrome.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "json"] }
tracing.workspace = true
unic-langid.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["serde"] }
pretty_assertions.workspace = true
test-case.workspace = true

[lints]
workspace = true
