[package]
name = "traceroute"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false

[dependencies]
trippy = { version = "0.12.2", path = "../../crates/trippy", default-features = false, features = ["core", "dns"] }
anyhow = "1.0.86"
itertools = "0.13.0"
clap = { version = "4.5.7", features = ["derive"] }
